[package]
name = "vhost_user_fs"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Provide virtio fs for VM"

[dependencies]
capng = "0.2.3"
log = "0.4"
libc = "0.2"
nix = "0.26.2"
thiserror = "1.0"
anyhow = "1.0"
vmm-sys-util = "0.11.1"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }
acpi = { path = "../acpi" }
devices = {path = "../devices"}
virtio = {path = "../virtio"}
