[package]
name = "virtio"
version = "2.2.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Virtio devices emulation"

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0"
anyhow = "1.0"
kvm-ioctls = ">=0.11.0"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
vmm-sys-util = ">=0.10.0"
address_space = { path = "../address_space" }
hypervisor = { path = "../hypervisor" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration_derive" }
sysbus = { path = "../sysbus" }
util = { path = "../util" }
pci = { path = "../pci" }
acpi = { path = "../acpi" }
devices = {path = "../devices"}

[target.'cfg(not(target_env = "musl"))'.dependencies]
vnc = { path = "../vnc" }
