[package]
name = "virtio"
version = "2.3.0"
authors = ["Huawei StratoVirt Team"]
edition = "2021"
license = "Mulan PSL v2"
description = "Virtio devices emulation"

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0"
anyhow = "1.0"
libc = "0.2"
log = "0.4"
serde_json = "1.0"
vmm-sys-util = "0.11.1"
once_cell = "1.18.0"
address_space = { path = "../address_space" }
machine_manager = { path = "../machine_manager" }
migration = { path = "../migration" }
migration_derive = { path = "../migration/migration_derive" }
util = { path = "../util" }
acpi = { path = "../acpi" }
devices = {path = "../devices"}
block_backend = {path = "../block_backend"}
chardev_backend = {path = "../chardev_backend" }
ui = { path = "../ui", features = ["console"], optional = true }
trace = {path = "../trace"}
clap = { version = "=4.1.4", default-features = false, features = ["std", "derive"] }

[features]
default = []
virtio_gpu = ["ui", "machine_manager/virtio_gpu", "util/pixman"]
ohui_srv = []
